# low

./: .gitignore  ARCHITECTURE.md  AUTO_FIX_AND_BUILD.bat  CMakeLists.txt  LICENSE  LOW.spec  LOW_fast.spec  MIGRATION_MAP.md  README.md  VERSION  build_exe.py  build_log.txt  config.py  fidel_installer.iss  hook-cffi.py  low_anim.py  low_installer.iss  main.py  main_ctk.py  make_icon.py  pyi_rth_pythonnet.py  requirements.txt  self_improvement.py  test_agnes.py  test_agnes2.py  test_agnes3.py  test_agnes4.py  test_do.py  test_endpoints.py  test_final.py  test_more.py  test_root.py
.claude/: launch.json
.fidel/: memoria.md
.github/: set_version.sh
.github/workflows/: build-windows.yml  build.yml
.low/: memoria.md  personajes.json
animation_engine/: __init__.py  nodes.py  project.py  renderer.py  rigging.py  storyboard.py
code_runner/: __init__.py
design_handoff_low_editor/: LOW Editor.dc.html  LOW Wireframes.dc.html  README.md
docs/: ANIMATION_STUDIO_ARCH.docx  SOCIAL_MODULE_SPEC.md
include/Low/Core/: Core.hpp  Logger.hpp  UUID.hpp
include/Low/Math/: AABB.hpp  Mat4.hpp  Math.hpp  Ray.hpp  Vec3.hpp
include/Low/Scene/: Scene.hpp  SceneModule.hpp  SceneObject.hpp
include/Low/Surface/: ISurface.hpp  PlaneSurface.hpp  SphereSurface.hpp  SurfaceEngine.hpp  SurfaceModule.hpp
low2-hybrid/: BUILD_INSTALLER_GUIDE.md  MIGRATION_PLAN.md  PROJECT_SUMMARY.md  package.json
low2-hybrid/modules/design/: canvas3d-enhanced.ts
low2-hybrid/native/bridge/: low_bridge.cpp  low_native_bridge.d.ts
low_repo/: main.py
low_repo/ui/: app.js  index.html
modules/design/: animation-3d-native.tsx  canvas3d-legacy.tsx
modules/design/components/: Toolbar3D.tsx
modules/design/hooks/: useNativeStrokeEngine.ts
providers/: __init__.py  agnes_provider.py  aimlapi_provider.py  anthropic_provider.py  base.py  cloudflare_provider.py  custom_provider.py  deepseek_provider.py  digitalocean_provider.py  fal_provider.py  glm_provider.py  groq_provider.py  ltx_provider.py  nvidia_provider.py  openai_provider.py  qwen_provider.py  replicate_provider.py  siliconflow_provider.py  transport.py
social/: __init__.py  brand.py  canva_client.py  db.py  oauth.py  secure.py  service.py  validator.py
social/adapters/: __init__.py  base.py  linkedin.py  meta.py  tiktok.py  x.py
src/Core/: Logger.cpp
tools/animation/: __init__.py  ai_pipeline.py  core.py  exporter.py  nodes.py  rigging.py  timeline.py
ui/: app.css  app.js  diag-tablet.html  index.html  lienzo3d.js  mock-api.js
